# llm_hands_on

./: .gitignore  Chapter_2_Exercise_Dataset.ipynb  Chapter_2_Exercise_Solutions.ipynb  Chapter_2_Working_with_Text_Data_KR.ipynb  Chapter_3_Attention_Mechanisms_KR.ipynb  Chapter_3_Excercise_Attention.ipynb  Chapter_4_Excercise_GPT.ipynb  Chapter_4_Implementing_a_GPT_model_from_Scratch_To_Generate_Text_KR.ipynb  Chapter_5_Excercise_Pretraining.ipynb  Chapter_5_Excercise_Pretraining_Cross_Entropy.ipynb  Chapter_5_Pretraining_on_Unlabeled Data_KR.ipynb  Chapter_6_Excercise_Finetuning_Classification.ipynb  Chapter_6_Excercise_Finetuning_Classification_LoRA.ipynb  Chapter_6_Finetuning_for_Text_Classification_KR.ipynb  Chapter_6_Finetuning_for_Text_Classification_LoRA_KR.ipynb  Chapter_7_Exercise_Follow_Instructions.ipynb  Chapter_7_Exercise_Follow_Instructions_dpo.ipynb  Chapter_7_Exercise_solutions.ipynb  Chapter_7_Finetuning_to_Follow_Instructions_DPO_KR.ipynb  Chapter_7_Finetuning_to_Follow_Instructions_KR.ipynb  Chapter_8_Excercise_Sparse_Encoder.ipynb  README.md  Vector Space 실습.ipynb  llm-instruction-eval-openai.ipynb  previous_chapters.py  pyproject.toml
llm 효율화/03_kv-cache/: README.md
llm_from_scratch/llm 효율화/03_kv-cache/: gpt_with_kv_cache.py
llm_from_scratch/llm 효율화/06_swa/: README.md
