[project]
name = "llm-hands-on"
version = "0.1.0"
description = "llm 실습용 노트북"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
