[project]
name = "llm-hands-on"
version = "0.1.0"
description = "llm 실습용 노트북"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.3",
    "unsloth>=2026.1.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
